# onepieceofdata

./: .env.example  .gitignore  API_MIGRATION_ANALYSIS.md  CLAUDE.md  DATABASE_SCHEMA.md  FEATURES.md  Makefile  PIPELINE.md  PLAN-RAG.md  PRD.md  README.md  analyze_character_scraping.py  analyze_character_urls.py  chapter.py  chapters.json  compare_dbs.py  compare_quality.py  compare_schemas.py  compare_scrapers.py  deep_comparison.py  docker-compose.yml  explore.ipynb  final_comparison.py  find_missing_chars.py  find_problem_chapters.py  fix_bounties.py  onepiece-master.duckdb  poc_api_scraper.py  pyproject.toml  requirements.txt  test-arc-saga.duckdb  test_api_vs_cloudscraper.py  test_arc_saga.py  test_chapter_api_scraper.py  test_chapters.json  to_csv.py  verify_fixed_chapters.py  volume.py
.beads/: .gitignore  config.yaml  issues.jsonl
cache/: chapters_100.json  chapters_1000.json  chapters_1100.json  chapters_200.json  chapters_300.json  chapters_400.json  chapters_500.json  chapters_600.json  chapters_700.json  chapters_800.json  chapters_900.json  characters_0.json  characters_100.json  characters_1000.json  characters_1100.json  characters_1200.json  characters_1300.json  characters_200.json  characters_300.json  characters_400.json  characters_500.json  characters_600.json  characters_700.json  characters_800.json  characters_900.json
config/: importance_weights.yaml
data/: arcs.json  chapter_parallel.json  chapters.csv  chapters.json  character_aliases.json  character_importance.csv  characters.csv  characters.json  characters_detail.csv  characters_detail.json  characters_detail_parallel.json  coc.csv  onepiece-comparison.duckdb  onepiece-final.duckdb  onepiece.duckdb  op.duckdb  sagas.json  sync_metadata.json  test-onepieceofdata.duckdb  volumes.json
docs/: IMPLEMENTATION_SUMMARY.md  MIGRATION_SUMMARY.md  NEXT_STEPS.md  SCHEMA_VISUAL.md  plan-character-thumbnails.md  plan-story-graph.md
exports/: arc.csv  chapter.csv  character.csv  character_bios.csv  coc.csv  cov.csv  saga.csv  volume.csv
exports/network_analysis/: network_analysis_report_gt10.md
notebooks/: explore.ipynb  explore_chapter.ipynb  explore_character.ipynb  explore_character_clean.ipynb  transform_character.ipynb
scripts/: build_character_graph.py  chapter.py  character.py  export_to_supabase_fts.py  run_network_explorer.py  to_csv.py  upload_character_thumbnails.py  utils.py  volume.py  volume_all.py
src/: configs.py  main_parser.py  main_scrapper.py
src/onepieceofdata/: __init__.py  cli.py
src/onepieceofdata/api/: __init__.py  fandom_client.py  wikitext_parser.py
src/onepieceofdata/cli/: __init__.py  chat.py  commands.py  embed.py  wiki_scrape.py
src/onepieceofdata/config/: __init__.py  settings.py
src/onepieceofdata/database/: __init__.py  operations.py  operations.py.backup  postgres_export.py  schema_mapper.py
src/onepieceofdata/embeddings/: __init__.py  chunker.py  embedder.py  (+1 more)
src/parser/: db_creation.py
src/scrapper/: chapter.py  character.py  to_csv.py  volume.py
supabase/migrations/: 002_wiki_text.sql  003_exec_readonly_sql.sql  004_profiles.sql
tests/: conftest.py  test_arc_scraper.py  test_character_scraper.py  test_chunker.py  test_config.py  test_database_operations.py  test_fandom_client.py  test_saga_scraper.py  test_utils.py  test_volume_scraper.py  test_wikitext_cleaner.py  test_wikitext_parser.py
web/network_explorer/: index.html
(+48 files in other folders)
